[gd_scene load_steps=3 format=3 uid="uid://ctjuxkeh04n8i"]

[ext_resource type="Script" uid="uid://fmadywde1bl3" path="res://UI/menu_main.gd" id="1_ltcc5"]
[ext_resource type="Texture2D" uid="uid://x5cp2037sd2e" path="res://Taxi_background.jpeg" id="2_bp7uk"]

[node name="MenuMain" type="Control" groups=["menu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ltcc5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bp7uk")
expand_mode = 3

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 75
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="rtlTitle" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Control3"]
layout_mode = 2
offset_right = 600.0
offset_bottom = 137.0
theme_override_constants/outline_size = 25
theme_override_font_sizes/normal_font_size = 100
theme_override_font_sizes/bold_font_size = 100
bbcode_enabled = true
text = "[b][color=\"#fe14bb\"]P[/color][color=\"#8aff00\"]A[/color][color=\"#10fee2\"]R[/color][color=\"#0066ff\"]T[/color][color=\"#c401db\"]Y[/color]  [color=\"#10fee2\"]T[/color][color=\"#8aff00\"]A[/color][color=\"#0066ff\"]X[/color][color=\"#fe14bb\"]I[/color][/b]"
fit_content = true
horizontal_alignment = 1

[node name="rtlTitle2" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Control3"]
layout_mode = 2
offset_top = 111.0
offset_right = 600.0
offset_bottom = 139.0
text = "by Devmo Games"
fit_content = true
scroll_active = false
horizontal_alignment = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="btnStart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Gearing up"
flat = true

[node name="btnButtons" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Controls"
flat = true

[node name="btnCredits" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Explanations"
flat = true

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="MarginContainer/VBoxContainer/btnStart" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/btnButtons" to="." method="_on_btn_buttons_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/btnCredits" to="." method="_on_btn_credits_pressed"]
